Validate Java helper attach failures